shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

uint16_t uniffi_hyperwhisper_core_checksum_func_openai_build_transcribe_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_openai_parse_transcribe_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_parse_health_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_phonetic_encode(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_preset_from_raw(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_process_voice_commands(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_remove_filler_words(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_remove_trailing_period(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_retry_max_attempts(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_retry_max_retry_after_secs(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_sanitize_streaming_buffer(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_sanitize_vocabulary_word(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_create_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_delete_file_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_delete_transcription_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_status_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_transcript_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_build_upload_request(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_parse_create_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_parse_status_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_parse_transcript_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_soniox_parse_upload_response(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_strip_wrapper_markers(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_universal_settings_to_macos_settings_json(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_func_validate_backup_json(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_method_keyvaluestore_get(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_method_keyvaluestore_set(void
    
);
uint16_t uniffi_hyperwhisper_core_checksum_method_keyvaluestore_delete(void
    
);
uint32_t ffi_hyperwhisper_core_uniffi_contract_version(void
    
);