shared-core-rs/bindings/csharp/hyperwhisper_core.cs


    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_openai_build_transcribe_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_openai_parse_transcribe_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_parse_health_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_phonetic_encode(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_preset_from_raw(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_process_voice_commands(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_remove_filler_words(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_remove_trailing_period(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_retry_max_attempts(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_retry_max_retry_after_secs(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_sanitize_streaming_buffer(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_sanitize_vocabulary_word(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_create_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_delete_file_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_delete_transcription_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_status_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_transcript_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_build_upload_request(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_parse_create_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_parse_status_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_parse_transcript_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_soniox_parse_upload_response(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_strip_wrapper_markers(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_universal_settings_to_macos_settings_json(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_func_validate_backup_json(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_method_keyvaluestore_get(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_method_keyvaluestore_set(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_hyperwhisper_core_checksum_method_keyvaluestore_delete(
    );

    [DllImport("hyperwhisper_core", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ffi_hyperwhisper_core_uniffi_contract_version(
    );

    

    static void uniffiCheckContractApiVersion() {
        var scaffolding_contract_version = _UniFFILib.ffi_hyperwhisper_core_uniffi_contract_version();
        if (26 != scaffolding_contract_version) {
            throw new UniffiContractVersionException($"uniffi.hyperwhisper_core: uniffi bindings expected version `26`, library returned `{scaffolding_contract_version}`");
        }
    }
